tried (and failed) to implement a profile-edit form

--- a/blog/templates/user_profile.html
+++ b/blog/templates/user_profile.html
@@ -2,6 +2,7 @@
 {% block content %}
     {% if user.is_authenticated %}
         <h2>Hi {{ user.first_name }}, this is your profile pg </h2>
+        <p>{{ user.blogger.bio }}</p>
         <!-- Add an edit bio, first name, last name etc. I think its. model.attr.save() buyt, lets look into it-->
         <c style="color:red">Don't forget to implement profile editing.</c>
     {% else %}
